validation, cleaning up files

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Code for testing the BE coding challenge",
   "main": "app.js",
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Rachel Segal",
@@ -11,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "joi": "^14.3.0",
     "mongoose": "^5.3.14"
   },
   "devDependencies": {
